# micro-rust

./: .clangd  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  compile_commands.json  errors  location.hh  main.cpp  out.stacks  readme.md  test_compiler.fish  yaccfile.output  yaccfile.tab.cc  yaccfile.tab.hh
ast/: ast.hpp  fun_decl.hpp  let.hpp  module.hpp  println.hpp  stmt.hpp  types.hpp
diagnostics/: diagnostic.hpp  module.hpp
expr/: bin_op_expr.hpp  block_expr.hpp  bool_lit.hpp  call_expr.hpp  dec_literal.hpp  expr.hpp  identifier.hpp  if_else_expr.hpp  literal.hpp  module.hpp  unary_op_expr.hpp  unit_expr.hpp  while_loop.hpp
hir/: module.hpp
include/: mr_util.hpp
lexer/: lexer.hpp  lexer.yy.cpp  lexfile.lex  span.hpp  token.hpp
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
middle/: ast_lowering.hpp  module.hpp  symbol_table.hpp  tast_builder.hpp  type.hpp  type_inference.hpp
middle/ir/: block.hpp  ir.hpp  local.hpp  module.hpp  scalar.hpp  statement.hpp  values.hpp
middle/tast/: module.hpp  stmt.hpp
middle/tast/expr/: assign_expr.hpp  bin_op_expr.hpp  block_expr.hpp  call_expr.hpp  expr.hpp  identifier.hpp  if_else_expr.hpp  literal.hpp  module.hpp  unary_op_expr.hpp  unit_expr.hpp  while_loop.hpp
parser/: location.hh  parser.output  parser.tab.cpp  parser.tab.hpp  yaccfile.yy
src/: main.cpp
src/ast/: ast.hpp  fun_decl.hpp  let.hpp  println.hpp  types.hpp  visitor.hpp
src/driver/: mr_driver.cpp  mr_driver.hpp
src/errors/: ctx.hpp  diagnostic.hpp  diagnostic_window.hpp  error.hpp  style.hpp
src/expr/: assign_expr.hpp  block_expr.hpp  expr.hpp  module.hpp  unit_expr.hpp
src/high/: dumper.hpp
src/high/ast/: ast.hpp  fun_decl.hpp  item.hpp  let.hpp  module.hpp  println.hpp  stmt.hpp  tagged_type.hpp  types.hpp  visitor.hpp
src/high/expr/: assign_expr.hpp  bin_op_expr.hpp  block_expr.hpp  call_expr.hpp  control_flow_exprs.hpp  expr.hpp  identifier.hpp  if_else_expr.hpp  literal.hpp  module.hpp  tuple_expr.hpp  unary_op_expr.hpp  unit_expr.hpp  while_loop.hpp
src/include/: datastructures.hpp  formatters.hpp  iterators.hpp  levenshtein.hpp  mr_util.hpp  ops.hpp  optional_util.hpp  unification_table.hpp
src/interpreter/: interpreter.hpp  stack.hpp  value.hpp
src/lexer/: lexer.hpp  lexer.yy.cpp  lexfile.lex  span.hpp  token.hpp
src/middle/: ast_lowering.hpp  errors.hpp  middle_phase.hpp  module.hpp  symbol_table.hpp  tast_builder.hpp  type.hpp  type_inference.hpp  unification_table.hpp
src/middle/consts/: checked_int_ops.hpp  scalar.hpp
src/middle/ir/: basic_blocks.hpp  block.hpp  block_id.hpp  checker.hpp  dumper.hpp  function.hpp  ir.hpp  local.hpp  module.hpp  statement.hpp  terminator.hpp  values.hpp  visitor.hpp
src/middle/ir/analysis/: analysis.hpp
src/middle/ir/checker/: analyzers.hpp  checker.hpp  errors.hpp
src/middle/ir/passes/: const_fold.hpp  pass.hpp  passmanager.hpp  remove_unused_locals.hpp  simplify.hpp
src/middle/ir/traversal/: postorder.hpp  preorder.hpp
src/middle/ir_analysis/: analysis.hpp  maybe_init.hpp  maybe_uninit.hpp
src/middle/passes/: const_fold.hpp  insert_live_deads.hpp  pass.hpp  passmanager.hpp  remove_unused_locals.hpp  simplify.hpp
src/middle/tast/: errors.hpp  expr.hpp  module.hpp  stmt.hpp  tast_builder.hpp
src/middle/tast/expr/: expr.hpp
src/middle/traversal/: postorder.hpp  preorder.hpp
src/middle/types/: ctx.hpp  errors.hpp  type.cpp  type.hpp
src/parser/: errors.hpp  location.hh  parser.output  parser.tab.cpp  parser.tab.hpp  yaccfile.yy
testfiles/: 1-var.rs  2-shadow.rs  3-i32.rs  5-block.rs  6-ref.rs  class_borrow_chck.rs  control_flow.rs  errors.rs  fn_in_fn.rs  fn_local_collision.rs  fn_ptrs.rs  infer_test.rs  short_circuit.rs  test_interp.rs  tuples_arrays.rs  wolf.rs
testfiles/original/: 1-var.rs  3-i32.rs  4-func.rs  5-block.rs
